--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 <body>
   <div class="container">
     <!-- Header Section -->
-    <div class="section">
+    <div class="section header-section">
+      <div class="profile-container">
+        <img src="profile.png" alt="Mohammed Elsayed" class="profile-image">
+      </div>
       <h1>
         <span class="gradient-text">Mohammed</span><br>
         <span>Elsayed</span>
@@ -31,9 +34,41 @@
     <div class="section">
       <h2>About me</h2>
       <div class="cyber-card">
-        <p>
-          I enjoy building games, tools, and small experiments using Java, C++, Python, and Godot.
-          Most of my workflow lives in Linux, the terminal, and Git/GitHub.
+        <p class="about-intro">
+          Passionate about crafting interactive experiences and robust backend systems. I specialize in:
+        </p>
+        <div class="skills-grid">
+          <div class="skill-item">
+            <span class="skill-icon">🎮</span>
+            <div>
+              <h3>Game Development</h3>
+              <p>Godot, GDScript</p>
+            </div>
+          </div>
+          <div class="skill-item">
+            <span class="skill-icon">⚙️</span>
+            <div>
+              <h3>Backend Systems</h3>
+              <p>Java, C++</p>
+            </div>
+          </div>
+          <div class="skill-item">
+            <span class="skill-icon">🐧</span>
+            <div>
+              <h3>System Programming</h3>
+              <p>Linux, Terminal</p>
+            </div>
+          </div>
+          <div class="skill-item">
+            <span class="skill-icon">📚</span>
+            <div>
+              <h3>Open Source</h3>
+              <p>Contribution & Collaboration</p>
+            </div>
+          </div>
+        </div>
+        <p class="about-outro">
+          Always learning, always building.
         </p>
       </div>
     </div>
@@ -82,12 +117,27 @@
           <div class="contact-value">mohammedalseyed9007@gmail.com</div>
           <a href="mailto:mohammedalseyed9007@gmail.com" style="display: none;"></a>
         </div>
+        <div class="contact-card">
+          <div class="contact-label">WhatsApp</div>
+          <div class="contact-value">Message Me</div>
+          <a href="https://wa.me/message/5VHWM24IR6HBB1" target="_blank" style="display: none;"></a>
+        </div>
+        <div class="contact-card">
+          <div class="contact-label">Discord</div>
+          <div class="contact-value">@Mohammed_Elsayed</div>
+          <a href="https://discord.com/users/1231674726460424222" target="_blank" style="display: none;"></a>
+        </div>
+        <div class="contact-card">
+          <div class="contact-label">LinkedIn</div>
+          <div class="contact-value">Mohammed El-Sayed</div>
+          <a href="https://www.linkedin.com/in/mohammed-el-sayed-3a8a62331/" target="_blank" style="display: none;"></a>
+        </div>
       </div>
     </div>
 
     <!-- Footer -->
     <div class="footer">
-      <p>Crafted with <span class="heart">❤</span> using HTML, CSS & JavaScript</p>
+      <p>Created by <span class="heart">Mohammed Elsayed</span></p>
     </div>
   </div>
 
