--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
 <body>
   <div class="container">
     <!-- Header Section -->
-    <div class="section header-section">
-      <div class="profile-container">
-        <img src="profile.png" alt="Mohammed Elsayed" class="profile-image">
-      </div>
+    <div class="section">
       <h1>
         <span class="gradient-text">Mohammed</span><br>
         <span>Elsayed</span>
@@ -88,6 +85,58 @@
       </div>
     </div>
 
+    <!-- Skills Progress Section -->
+    <div class="section">
+      <h2>Expertise Level</h2>
+      <div class="skills-progress">
+        <div class="progress-item">
+          <div class="progress-header">
+            <span class="progress-label">Java</span>
+            <span class="progress-percentage">80%</span>
+          </div>
+          <div class="progress-bar">
+            <div class="progress-fill" style="width: 80%"></div>
+          </div>
+        </div>
+        <div class="progress-item">
+          <div class="progress-header">
+            <span class="progress-label">C++</span>
+            <span class="progress-percentage">75%</span>
+          </div>
+          <div class="progress-bar">
+            <div class="progress-fill" style="width: 75%"></div>
+          </div>
+        </div>
+        <div class="progress-item">
+          <div class="progress-header">
+            <span class="progress-label">Godot</span>
+            <span class="progress-percentage">85%+</span>
+          </div>
+          <div class="progress-bar">
+            <div class="progress-fill" style="width: 85%"></div>
+          </div>
+        </div>
+        <div class="progress-item">
+          <div class="progress-header">
+            <span class="progress-label">Python</span>
+            <span class="progress-percentage">85%</span>
+          </div>
+          <div class="progress-bar">
+            <div class="progress-fill" style="width: 85%"></div>
+          </div>
+        </div>
+        <div class="progress-item">
+          <div class="progress-header">
+            <span class="progress-label">Linux & Terminal</span>
+            <span class="progress-percentage">85%</span>
+          </div>
+          <div class="progress-bar">
+            <div class="progress-fill" style="width: 85%"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Projects Section -->
     <div class="section">
       <h2>Projects</h2>
@@ -101,37 +150,31 @@
     <!-- Contact Section -->
     <div class="section">
       <h2>Contact</h2>
-      <div class="contact-grid">
-        <div class="contact-card">
-          <div class="contact-label">GitHub</div>
-          <div class="contact-value">Mohamed-Elsayed970</div>
-          <a href="https://github.com/Mohamed-Elsayed970" target="_blank" style="display: none;"></a>
-        </div>
-        <div class="contact-card">
-          <div class="contact-label">Telegram</div>
-          <div class="contact-value">@Moh970ed</div>
-          <a href="https://t.me/Moh970ed" target="_blank" style="display: none;"></a>
-        </div>
-        <div class="contact-card">
-          <div class="contact-label">Email</div>
-          <div class="contact-value">mohammedalseyed9007@gmail.com</div>
-          <a href="mailto:mohammedalseyed9007@gmail.com" style="display: none;"></a>
-        </div>
-        <div class="contact-card">
-          <div class="contact-label">WhatsApp</div>
-          <div class="contact-value">Message Me</div>
-          <a href="https://wa.me/message/5VHWM24IR6HBB1" target="_blank" style="display: none;"></a>
-        </div>
-        <div class="contact-card">
-          <div class="contact-label">Discord</div>
-          <div class="contact-value">@Mohammed_Elsayed</div>
-          <a href="https://discord.com/users/1231674726460424222" target="_blank" style="display: none;"></a>
-        </div>
-        <div class="contact-card">
-          <div class="contact-label">LinkedIn</div>
-          <div class="contact-value">Mohammed El-Sayed</div>
-          <a href="https://www.linkedin.com/in/mohammed-el-sayed-3a8a62331/" target="_blank" style="display: none;"></a>
-        </div>
+      <div class="contact-icons">
+        <a href="https://github.com/Mohamed-Elsayed970" target="_blank" class="contact-icon" title="GitHub">
+          <span class="icon-symbol">🐙</span>
+          <span class="icon-label">GitHub</span>
+        </a>
+        <a href="https://t.me/Moh970ed" target="_blank" class="contact-icon" title="Telegram">
+          <span class="icon-symbol">✈️</span>
+          <span class="icon-label">Telegram</span>
+        </a>
+        <a href="mailto:mohammedalseyed9007@gmail.com" class="contact-icon" title="Email">
+          <span class="icon-symbol">✉️</span>
+          <span class="icon-label">Email</span>
+        </a>
+        <a href="https://wa.me/message/5VHWM24IR6HBB1" target="_blank" class="contact-icon" title="WhatsApp">
+          <span class="icon-symbol">💬</span>
+          <span class="icon-label">WhatsApp</span>
+        </a>
+        <a href="https://discord.com/users/1231674726460424222" target="_blank" class="contact-icon" title="Discord">
+          <span class="icon-symbol">🎮</span>
+          <span class="icon-label">Discord</span>
+        </a>
+        <a href="https://www.linkedin.com/in/mohammed-el-sayed-3a8a62331/" target="_blank" class="contact-icon" title="LinkedIn">
+          <span class="icon-symbol">💼</span>
+          <span class="icon-label">LinkedIn</span>
+        </a>
       </div>
     </div>
 
