--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
     <div class="section">
       <h2>About me</h2>
       <div class="cyber-card">
-        <p class="about-intro">
-          Passionate about crafting interactive experiences and robust backend systems. I specialize in:
-        </p>
+        <p class="about-intro">Passionate about crafting interactive experiences and robust backend systems. I specialize in:</p>
         <div class="skills-grid">
           <div class="skill-item">
             <span class="skill-icon">🎮</span>
@@ -64,9 +62,7 @@
             </div>
           </div>
         </div>
-        <p class="about-outro">
-          Always learning, always building.
-        </p>
+        <p class="about-outro">Always learning, always building.</p>
       </div>
     </div>
 
@@ -85,61 +81,14 @@
       </div>
     </div>
 
-    <!-- Skills Progress Section -->
-    <div class="section">
-      <h2>Expertise Level</h2>
-      <div class="skills-progress">
-        <div class="progress-item">
-          <div class="progress-header">
-            <span class="progress-label">Java</span>
-            <span class="progress-percentage">80%</span>
-          </div>
-          <div class="progress-bar">
-            <div class="progress-fill" style="width: 80%"></div>
-          </div>
-        </div>
-        <div class="progress-item">
-          <div class="progress-header">
-            <span class="progress-label">C++</span>
-            <span class="progress-percentage">75%</span>
-          </div>
-          <div class="progress-bar">
-            <div class="progress-fill" style="width: 75%"></div>
-          </div>
-        </div>
-        <div class="progress-item">
-          <div class="progress-header">
-            <span class="progress-label">Godot</span>
-            <span class="progress-percentage">85%+</span>
-          </div>
-          <div class="progress-bar">
-            <div class="progress-fill" style="width: 85%"></div>
-          </div>
-        </div>
-        <div class="progress-item">
-          <div class="progress-header">
-            <span class="progress-label">Python</span>
-            <span class="progress-percentage">85%</span>
-          </div>
-          <div class="progress-bar">
-            <div class="progress-fill" style="width: 85%"></div>
-          </div>
-        </div>
-        <div class="progress-item">
-          <div class="progress-header">
-            <span class="progress-label">Linux & Terminal</span>
-            <span class="progress-percentage">85%</span>
-          </div>
-          <div class="progress-bar">
-            <div class="progress-fill" style="width: 85%"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-
     <!-- Projects Section -->
     <div class="section">
       <h2>Projects</h2>
+      <div class="project-card">
+        <h3 class="project-title">AnderMagic</h3>
+        <p>Advanced Godot game with magical mechanics and interactive gameplay.</p>
+        <a href="https://github.com/Mohamed-Elsayed970" target="_blank">View on GitHub →</a>
+      </div>
       <div class="project-card">
         <h3 class="project-title">First_Game</h3>
         <p>First published Godot game prototype on GitHub.</p>
